Carga de archivos de la PreEntrega 3

--- a/pages/exposiciones.html
+++ b/pages/exposiciones.html
@@ -45,15 +45,13 @@
     <!-- Artículo principal -->
     <main>
         <div class="textos">
-            <h1>EXPOSICIONES</h1>
-            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ullam repellendus porro? Deleniti sequi cum temporibus nesciunt soluta illo minus incidunt, cumque error veniam recusandae beatae nihil iste. Illum, incidunt.</P>
-            <h2>AMÉRICA PRECOLOMBINA EN EL ARTE</h2>  
- 
+            <h1>EXPOSICIONES</h1> 
         </div>
 
         <div class="img">
             <img src="../img/america-precolombina-en-el-arte.jpg" alt="Foto de América Precolombina en el arte">              
-        </div>               
+        </div>
+        <br>               
 
     </main>
 
@@ -63,16 +61,21 @@
         
         <div>
             <h2>CHILE ANTES DE CHILE</h2>
+            <p>Han transcurrido más de 14.000 años desde que el ser humano puso sus pies en el actual territorio chileno. Desde entonces, diferentes pueblos han habitado esta variada geografía. Aunque no todos están representados en esta exhibición, les invitamos a conocer a esos habitantes ancestrales y a sus descendientes, los actuales pueblos originarios. Esta muestra nos recuerda que sus genes, sus manifestaciones artísticas y su épica forman parte de nuestra identidad como chilenos.</p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/9edv7-B5pU0?si=x2uLqfxRLa3HNHpS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
+        <br>
         
         <div>
             <h2>EXPOSICIONES TEMPORALES</h2>
+            <p>Mini sitios sobre las exposiciones temporales que el Museo exhibe cada año</p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/HTMaiJ6Tva8?si=9-iNBBv5WR94LUuI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
+        <br>
 
         <div>
             <h2>EXPOSICIONES ITINERANTES</h2>
+            <p>Exhibiciones preparadas por el Museo para itinerar por Chile y el Mundo.</p>
             <img src="../img/exposiciones-itinerantes.png" alt="">
 
         </div>
