--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <main>
         <div class="textos">
           <h1>Chile Antes de Chile</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam hic voluptas reprehenderit ut qui molestiae cum nam dolore rem totam odio provident eum dolorum nulla natus quasi iusto, omnis beatae?</p>  
+          <p>La exhibición abarca desde los más antiguos grupos de pescadores hasta los actuales pueblos originarios.</p>  
         </div>
 
         <div class="img">
