--- a/pages/coleccion.html
+++ b/pages/coleccion.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!-- Link css de Colección -->
-     <link rel="stylesheet" href="../css/coleccion.css">
+     <link rel="stylesheet" href="../css/main.css">
     <title>Colección - MChAP</title>
 </head>
 <body>
@@ -45,13 +45,24 @@
 
      <!-- contenido principal -->
       <main>
+        <h1>MESO AMÉRICA</h1>
         <div class="img-uno"><img src="../img/mesoamerica.png" alt="Meso América"></div>
+        <p>Área que abarca México, Guatemala, Honduras, El Salvador y parte de Nicaragua.</p>
+        <h1>INTERMEDIA</h1>
         <div class="img-dos"><img src="../img/intermedia.png" alt="Imagen Intermedia"></div>
+        <p>Área que abarca Colombia y Ecuador.</p>
+        <h1>CARIBE</h1>
         <div class="img-tres"><img src="../img/caribe.jpg" alt="Imagen Caribe"></div>
+        <p>Área que abarca Mar Caribe y las Antillas</p>
+        <h1>AMAZONAS</h1>
         <div class="img-cuatro"><img src="../img/amazonas.jpg" alt="Imagen Amazonas"></div>
-        <div class="img-cinco"><img src="../img/andes-centrales.jpg" alt="Imagen Andes Centrales"></div>       
+        <p>Área que abarca la Selva Amazónica</p>
+        <h1>ANDES CENTRALES</h1>
+        <div class="img-cinco"><img src="../img/andes-centrales.jpg" alt="Imagen Andes Centrales"></div>
+        <p>Área que abarca Perú y Bolivia</p>       
       </main>
 
+      
       <!-- Pie de página -->
 
       <footer>
