--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -6,7 +6,7 @@
     <!-- Enlace a Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">   
     <!-- enlace al css -->
-    <link rel="stylesheet" href="../css/coleccion.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Eventos - MChAP</title>
 </head>
 <body>
@@ -47,33 +47,30 @@
 
         <div class="img-uno">
             <img src="../img/imagen-evento1.jpg" alt="Imagen Evento 1">
-            <h4>Evento 1</h4>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. A porro rem soluta enim quibusdam sunt quisquam ipsum aperiam quae molestias. Dolores, odit nisi veniam tenetur placeat consequuntur libero dolor obcaecati?</p>
+            <h4>Archivo patrimonial</h4>
+            <p>Te invitamos a conocer parte de las colecciones Guitarroneros de Pirque, Isabel Aretz y Bailes Chinos del Aconcagua.</p>
         </div>
 
         <div class="img-dos">
-            <img src="../img/imagen-evento2.jpg" alt="Imagen Evento 2">        <h4>Evento 2</h4>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius enim dolorum sint beatae ab eligendi quis id est cum possimus, consequatur debitis repudiandae, veritatis veniam odio. Provident quasi sequi porro.</p>
+            <img src="../img/imagen-evento2.jpg" alt="Imagen Evento 2">
+            <h4>Exposición “Contactos. Textiles coloniales de Los Andes”</h4>
+            <p>Reúne por primera vez una extraordinaria colección de tapices y pinturas de Chile y Perú.</p>
         </div>
 
         <div class="img-tres">
-            <img src="../img/imagen-evento3.png" alt="Imagen Evento 3">        <h4>Evento 3</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis tenetur numquam! Quisquam aliquid, rerum tempora voluptas obcaecati eaque mollitia similique, magnam ex voluptatum labore vero quaerat nisi sint vel!</p>
+            <img src="../img/imagen-evento3.png" alt="Imagen Evento 3">
+            <h4>Niñ@s y familias</h4>
+            <p>Descubre y aprende a admirar el patrimonio cultural de los pueblos americanos con divertidos materiales descargables para jugar en familia.</p>
 
         </div>
 
         <div class="img-cuatro">
-            <img src="../img/imagen-evento4.jpg" alt="Imagen Evento 4">        <h4>Evento 4</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis tenetur numquam! Quisquam aliquid, rerum tempora voluptas obcaecati eaque mollitia similique, magnam ex voluptatum labore vero quaerat nisi sint vel!</p>
+            <img src="../img/imagen-evento4.jpg" alt="Imagen Evento 4">
+            <h4>Explorando las colecciones</h4>
+            <p>Conoce mil piezas de nuestra colección, sumérgete en cinco mil años de arte amerindio de gran parte del continente.</p>
         </div>
 
     </main>
-
-    <section>
-        <H1>EVENTOS</H1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam sit ducimus, soluta labore molestiae cumque sint repellat quasi repellendus et molestias voluptas placeat ea architecto. Recusandae accusantium voluptatibus corporis nemo.</p>
-    </section>
-
 
     <footer>
         <div>
