--- a/pages/visitas-educativas.html
+++ b/pages/visitas-educativas.html
@@ -7,7 +7,7 @@
     <!-- Enlace a Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">    
     <!-- Enlace al css -->
-     <link rel="stylesheet" href="../css/visitas.css">
+     <link rel="stylesheet" href="../css/main.css">
     <title>Visitas Educativas - MChAP</title>
 </head>
 <body>
@@ -47,9 +47,17 @@
         <div class="row gap-3">
             <h1>VISITAS EDUCATIVAS</h1>
             <img src="../img/visitas-educativas.jpg" alt="Imagen Visitas" class="col-sm-8 col-md-6 col-lg-4" w-50>
-            <p class="col-sm-8 col-md-6 col-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel exercitationem eveniet quisquam aliquid error ex atque ab minima quas! Nisi, laborum. Cumque deleniti vero fugit culpa adipisci deserunt officiis dicta?</p>
+            <p class="col-sm-8 col-md-6 col-lg-4">El Museo cuenta con visitas educativas, sin costo adicional, para los establecimientos educacionales de Enseñanza Parvularia, Básica y Media. Puede inscribirse en visitas@museoprecolombino.cl
+              Para visitas sin guía no es necesario reservar una hora.</p>
         </div>
+        <br> 
     </main>
+
+    <section>
+      <h1>VISITAS PRIVADAS</h1>
+      <P>Si eres operador turístico o representas a una agencia de turismo y deseas agendar una visita exclusiva para tu grupo, escribe a eventos@museoprecolombino.cl</P>
+
+    </section>
     
 <!-- Pie de página -->
 
